--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -152,15 +152,16 @@
      "text": [
       "Writing to shared output file\n",
       "transformer_restricted_days_seed_0\n",
-      "Running model: neurips_transformer_restricted_days_3_seed_0\n",
-      "[4, 5, 6, 7, 8]\n"
+      "Running model: neurips_gru_data_log_time_masked_lr_schedule_seed_0\n",
+      "[]\n",
+      "Loading GRU\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14097/2065320861.py:238: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_14097/1091477822.py:238: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -168,152 +169,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CER DAY:  2.5625\n",
-      "CER DAY:  2.65\n",
-      "CER DAY:  2.6421875\n",
-      "CER DAY:  2.7484375\n",
-      "CER DAY:  2.6484375\n",
-      "Model performance:  2.6503125\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.01645391047000885 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (2.905625, 2.80125, 3.01125) (2.87125, 2.77371875, 2.97125)\n",
-      "transformer_restricted_days_seed_0\n",
-      "Running model: neurips_transformer_restricted_days_2_seed_0\n",
-      "[9, 10, 12, 13, 14]\n",
-      "CER DAY:  3.28125\n",
-      "CER DAY:  2.8484375\n",
-      "CER DAY:  2.6390625\n",
-      "CER DAY:  2.803125\n",
-      "CER DAY:  3.084375\n",
-      "Model performance:  2.93125\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.018825989961624146 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.15375, 3.0428125, 3.2675) (3.14125, 3.0375, 3.2475)\n",
-      "transformer_restricted_days_seed_0\n",
-      "Running model: neurips_transformer_time_masked_restricted_days_seed_0\n",
-      "[15, 16, 17, 18, 19, 20]\n",
-      "CER DAY:  2.8734375\n",
-      "CER DAY:  2.8859375\n",
-      "CER DAY:  3.0703125\n",
-      "CER DAY:  3.21875\n",
-      "CER DAY:  2.8703125\n",
-      "Model performance:  2.98375\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.01699583113193512 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.2815625, 3.1775, 3.38625) (3.27, 3.17, 3.3725)\n",
-      "transformer_restricted_days_seed_1\n",
-      "Running model: neurips_transformer_restricted_days_3_seed_1\n",
-      "[4, 5, 6, 7, 8]\n",
-      "CER DAY:  2.5859375\n",
-      "CER DAY:  2.653125\n",
-      "CER DAY:  2.659375\n",
-      "CER DAY:  2.784375\n",
-      "CER DAY:  2.7\n",
-      "Model performance:  2.6765625\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.016302066445350646 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (2.9284375, 2.8278046875, 3.0346875) (2.89375, 2.795, 2.995)\n",
-      "transformer_restricted_days_seed_1\n",
-      "Running model: neurips_transformer_restricted_days_2_seed_1\n",
-      "[9, 10, 12, 13, 14]\n",
-      "CER DAY:  3.3734375\n",
-      "CER DAY:  2.9046875\n",
-      "CER DAY:  2.678125\n",
-      "CER DAY:  2.81875\n",
-      "CER DAY:  3.1296875\n",
-      "Model performance:  2.9809375\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.017560182213783262 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.1903125, 3.0781171875, 3.303125) (3.15, 3.0475, 3.25375)\n",
-      "transformer_restricted_days_seed_1\n",
-      "Running model: neurips_transformer_time_masked_restricted_days_seed_1\n",
-      "[15, 16, 17, 18, 19, 20]\n",
-      "CER DAY:  2.8671875\n",
-      "CER DAY:  2.8375\n",
-      "CER DAY:  3.0765625\n",
-      "CER DAY:  3.2125\n",
-      "CER DAY:  2.85\n",
-      "Model performance:  2.96875\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.016452507972717287 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.2759375, 3.169375, 3.3775078124999998) (3.2625, 3.1625, 3.36)\n",
-      "transformer_restricted_days_seed_2\n",
-      "Running model: neurips_transformer_restricted_days_3_seed_2\n",
-      "[4, 5, 6, 7, 8]\n",
-      "CER DAY:  2.5703125\n",
-      "CER DAY:  2.65\n",
-      "CER DAY:  2.646875\n",
-      "CER DAY:  2.7734375\n",
-      "CER DAY:  2.6765625\n",
-      "Model performance:  2.6634375\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.016953092217445374 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (2.91625, 2.815625, 3.0190625) (2.88, 2.78125, 2.98125)\n",
-      "transformer_restricted_days_seed_2\n",
-      "Running model: neurips_transformer_restricted_days_2_seed_2\n",
-      "[9, 10, 12, 13, 14]\n",
-      "CER DAY:  3.3015625\n",
-      "CER DAY:  2.8890625\n",
+      "CER DAY:  2.5734375\n",
+      "CER DAY:  2.671875\n",
+      "CER DAY:  2.634375\n",
+      "CER DAY:  2.7375\n",
+      "CER DAY:  2.6859375\n",
+      "CER DAY:  3.334375\n",
+      "CER DAY:  2.9125\n",
       "CER DAY:  2.628125\n",
-      "CER DAY:  2.8109375\n",
-      "CER DAY:  3.1109375\n",
-      "Model performance:  2.948125\n",
+      "CER DAY:  2.7890625\n",
+      "CER DAY:  3.1171875\n",
+      "CER DAY:  2.871875\n",
+      "CER DAY:  2.8765625\n",
+      "CER DAY:  3.0328125\n",
+      "CER DAY:  3.28125\n",
+      "CER DAY:  2.9078125\n",
+      "Model performance:  2.8703125\n",
       "Running n-gram LM\n",
-      "N-gram decoding took 0.01811500430107117 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.1771875, 3.0671875, 3.2900078125) (3.155, 3.05, 3.26125)\n",
-      "transformer_restricted_days_seed_2\n",
-      "Running model: neurips_transformer_time_masked_restricted_days_seed_2\n",
-      "[15, 16, 17, 18, 19, 20]\n",
-      "CER DAY:  2.85625\n",
-      "CER DAY:  2.85\n",
-      "CER DAY:  3.003125\n",
-      "CER DAY:  3.23125\n",
-      "CER DAY:  2.875\n",
-      "Model performance:  2.963125\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.0169236820936203 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.258125, 3.155, 3.359375) (3.265, 3.16625, 3.36625)\n",
-      "transformer_restricted_days_seed_3\n",
-      "Running model: neurips_transformer_restricted_days_3_seed_3\n",
-      "[4, 5, 6, 7, 8]\n",
-      "CER DAY:  2.5578125\n",
-      "CER DAY:  2.6703125\n",
-      "CER DAY:  2.621875\n",
-      "CER DAY:  2.746875\n",
-      "CER DAY:  2.65625\n",
-      "Model performance:  2.650625\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.016385933160781862 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (2.9221875, 2.82125, 3.0271875) (2.88125, 2.78375, 2.9825)\n",
-      "transformer_restricted_days_seed_3\n",
-      "Running model: neurips_transformer_restricted_days_2_seed_3\n",
-      "[9, 10, 12, 13, 14]\n",
-      "CER DAY:  3.3296875\n",
-      "CER DAY:  2.85\n",
-      "CER DAY:  2.6546875\n",
-      "CER DAY:  2.790625\n",
-      "CER DAY:  3.0890625\n",
-      "Model performance:  2.9428125\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.017447618246078492 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.1784375, 3.06375, 3.2915703124999998) (3.15125, 3.04625, 3.2575)\n",
-      "transformer_restricted_days_seed_3\n",
-      "Running model: neurips_transformer_time_masked_restricted_days_seed_3\n",
-      "[15, 16, 17, 18, 19, 20]\n",
-      "CER DAY:  2.853125\n",
-      "CER DAY:  2.8421875\n",
-      "CER DAY:  3.0125\n",
-      "CER DAY:  3.228125\n",
-      "CER DAY:  2.8828125\n",
-      "Model performance:  2.96375\n",
-      "Running n-gram LM\n",
-      "N-gram decoding took 0.01724712669849396 seconds per sample\n",
-      "CER and WER after 3-gram LM:  (3.2675, 3.163125, 3.3721953124999997) (3.26, 3.16125, 3.36125)\n"
+      "Average decoding time per sample: 0.026 seconds\n",
+      "Standard deviation: 0.019 seconds\n"
      ]
     }
    ],
    "source": [
-    "output_file = 'leia'    \n",
+    "output_file = 'obi'    \n",
     "device = \"cuda:2\"\n",
     "\n",
     "if output_file == 'obi':\n",
@@ -321,7 +200,7 @@
     "elif output_file == 'leia':\n",
     "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
     "    \n",
-    "models_to_run = ['neurips_transformer_restricted_days_3', 'neurips_transformer_restricted_days_2', 'neurips_transformer_time_masked_restricted_days']\n",
+    "models_to_run = ['neurips_gru_data_log_time_masked_lr_schedule']\n",
     "\n",
     "shared_output_file = 'transformer_restricted_days'\n",
     "\n",
@@ -331,7 +210,7 @@
     "else:\n",
     "    write_mode = \"w\"\n",
     "    \n",
-    "seeds_list = [0,1,2,3]\n",
+    "seeds_list = [0]\n",
     "partition = \"competition\" # \"test\"\n",
     "run_lm = True\n",
     "\n",
@@ -591,17 +470,19 @@
     "            start_t = time.time()\n",
     "            nbest_outputs = []\n",
     "            \n",
+    "            sample_times = []\n",
+    "\n",
     "            for j in range(len(model_outputs[\"logits\"])):\n",
-    "                \n",
     "                logits = model_outputs[\"logits\"][j]\n",
-    "                \n",
-    "                \n",
-    "                logits = np.concatenate(\n",
-    "                    [logits[:, 1:], logits[:, 0:1]], axis=-1\n",
-    "                )  # Blank is last token\n",
-    "                \n",
+    "\n",
+    "                # Move blank token to the end\n",
+    "                logits = np.concatenate([logits[:, 1:], logits[:, 0:1]], axis=-1)\n",
+    "\n",
+    "                # Rearrange logits for decoding\n",
     "                logits = lmDecoderUtils.rearrange_speech_logits(logits[None, :, :], has_sil=True)\n",
-    "                \n",
+    "\n",
+    "                # Time individual sample decoding\n",
+    "                sample_start = time.time()\n",
     "                nbest = lmDecoderUtils.lm_decode(\n",
     "                    ngramDecoder,\n",
     "                    logits[0],\n",
@@ -609,13 +490,21 @@
     "                    returnNBest=return_n_best,\n",
     "                    rescore=rescore,\n",
     "                )\n",
-    "                \n",
+    "                sample_end = time.time()\n",
+    "\n",
+    "                sample_times.append(sample_end - sample_start)\n",
     "                nbest_outputs.append(nbest)\n",
-    "                \n",
-    "            time_per_sample = (time.time() - start_t) / len(model_outputs[\"logits\"])\n",
-    "            print(f\"N-gram decoding took {time_per_sample} seconds per sample\")\n",
-    "            \n",
+    "\n",
+    "            # Convert to numpy array for stats\n",
+    "            sample_times = np.array(sample_times)\n",
+    "            mean_time = np.mean(sample_times)\n",
+    "            std_time = np.std(sample_times)\n",
+    "\n",
+    "            print(f\"Average decoding time per sample: {mean_time:.3f} seconds\")\n",
+    "            print(f\"Standard deviation: {std_time:.3f} seconds\")\n",
+    "            break\n",
     "            if run_for_llm:\n",
+    "                \n",
     "                print(\"SAVING OUTPUTS FOR LLM\")\n",
     "                with open(f\"{saveFolder_transcripts}{model_name_str}_seed_{seed}_model_outputs.pkl\", \"wb\") as f:\n",
     "                    pickle.dump(model_outputs, f)\n",
@@ -678,7 +567,28 @@
     }
    ],
    "source": [
-    "len(loadedData['competition'])"
+    "# TM TRANSFORMER \n",
+    "0.016 +/- 0.006 seconds\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.6874999999999996"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.059/0.016\n"
    ]
   },
   {
