--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -133,12 +133,40 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Get model predictions\n",
-    "## Always check to make sure val perf matches wandb"
+    "# file path stuff for when running models on two servers (obiwan or leia)\n",
+    "# model storage locations and data path within model args differ depending on \n",
+    "# the server. \n",
+    "current_server = 'obi'\n",
+    "server_models_ran_on = 'obi'\n",
+    "\n",
+    "if current_server == 'obi':\n",
+    "    \n",
+    "    if server_models_ran_on == 'obi':\n",
+    "        model_storage_path = '/data/willett_data/outputs/'\n",
+    "        \n",
+    "    elif server_models_ran_on == 'leia':\n",
+    "        model_storage_path = '/data/willett_data/leia_outputs/'\n",
+    "\n",
+    "if current_server == 'leia':\n",
+    "    \n",
+    "    if server_models_ran_on == 'obi':\n",
+    "        model_storage_path = '/home3/skaasyap/willett/obi_models/outputs/'\n",
+    "    \n",
+    "    elif server_models_ran_on == 'leia':\n",
+    "        model_storage_path = '/home3/skaasyap/willett/outputs'\n",
+    "        \n",
+    "leia_to_obi_dict = {'/home3/skaasyap/willett/data_log_both':'/data/willett_data/ptDecoder_ctc_both', \n",
+    "                    '/home3/skaasyap/willett/data_log':'/data/willett_data/ptDecoder_ctc',\n",
+    "                    '/home3/skaasyap/willett/data_log_both_held_out_days': '/data/willett_data/ptDecoder_ctc_both_held_out_days', \n",
+    "                    '/home3/skaasyap/willett/data_log_both_held_out_days_1': '/data/willett_data/ptDecoder_ctc_both_held_out_days_1',\n",
+    "                    '/home3/skaasyap/willett/data_log_both_held_out_days_2': '/data/willett_data/ptDecoder_ctc_both_held_out_days_2'}\n",
+    "\n",
+    "obi_to_leia_dict = {v:k for k, v in leia_to_obi_dict.items()}"
    ]
   },
   {
@@ -192,14 +220,8 @@
     }
    ],
    "source": [
-    "output_file = 'obi'    \n",
     "device = \"cuda:2\"\n",
     "\n",
-    "if output_file == 'obi':\n",
-    "    model_storage_path = '/data/willett_data/outputs/'\n",
-    "elif output_file == 'leia':\n",
-    "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
-    "    \n",
     "models_to_run = ['neurips_gru_data_log_time_masked_lr_schedule']\n",
     "\n",
     "shared_output_file = 'transformer_restricted_days'\n",
@@ -253,24 +275,20 @@
     "        with open(modelPath + \"/args\", \"rb\") as handle:\n",
     "            args = pickle.load(handle)\n",
     "            \n",
-    "        if args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both':\n",
-    "            data_file = '/data/willett_data/ptDecoder_ctc_both'\n",
+    "        # modify data file path based on which server model was ran on \n",
+    "        # and which server is currently being used to run this notebok.\n",
+    "        if server_models_ran_on != current_server:\n",
     "            \n",
-    "        elif args['datasetPath'].rsplit('/', 1)[-1] == 'data':\n",
-    "            data_file = '/data/willett_data/ptDecoder_ctc'\n",
-    "            \n",
-    "        elif args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both_held_out_days':\n",
-    "            data_file = '/data/willett_data/ptDecoder_ctc_both_held_out_days'\n",
-    "            \n",
-    "        elif args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both_held_out_days_1':\n",
-    "            data_file = '/data/willett_data/ptDecoder_ctc_both_held_out_days_1'\n",
-    "            \n",
-    "        elif args['datasetPath'].rsplit('/', 1)[-1] == 'data_log_both_held_out_days_2':\n",
-    "            data_file = '/data/willett_data/ptDecoder_ctc_both_held_out_days_2'\n",
-    "            \n",
+    "            if current_server == 'leia':\n",
+    "                data_file = leia_to_obi_dict[args['datasetPath']]\n",
+    "            elif current_server == 'obi':\n",
+    "                data_file = obi_to_leia_dict[args['datasetPath']]\n",
+    "        \n",
     "        else:\n",
+    "            \n",
     "            data_file = args['datasetPath']\n",
     "            \n",
+    "      \n",
     "        if 'ventral_6v_only' not in args:\n",
     "            args['ventral_6v_only'] = False\n",
     "            \n",
