cleaned up lm more

--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +146,8 @@
     "\n",
     "if current_server == 'obi':\n",
     "    \n",
+    "    base_path = '/data/willett_data/'\n",
+    "    \n",
     "    if server_models_ran_on == 'obi':\n",
     "        model_storage_path = '/data/willett_data/outputs/'\n",
     "        \n",
@@ -153,6 +155,8 @@
     "        model_storage_path = '/data/willett_data/leia_outputs/'\n",
     "\n",
     "if current_server == 'leia':\n",
+    "    \n",
+    "    base_path = '/home3/skaasyap/willett/'\n",
     "    \n",
     "    if server_models_ran_on == 'obi':\n",
     "        model_storage_path = '/home3/skaasyap/willett/obi_models/outputs/'\n",
@@ -166,7 +170,7 @@
     "                    '/home3/skaasyap/willett/data_log_both_held_out_days_1': '/data/willett_data/ptDecoder_ctc_both_held_out_days_1',\n",
     "                    '/home3/skaasyap/willett/data_log_both_held_out_days_2': '/data/willett_data/ptDecoder_ctc_both_held_out_days_2'}\n",
     "\n",
-    "obi_to_leia_dict = {v:k for k, v in leia_to_obi_dict.items()}"
+    "obi_to_leia_dict = {v:k for k, v in leia_to_obi_dict.items()}\n"
    ]
   },
   {
@@ -245,11 +249,10 @@
     "prev_day = None\n",
     "\n",
     "if partition == 'test':\n",
-    "    saveFolder_transcripts = \"/data/willett_data/model_transcriptions/\"\n",
+    "    saveFolder_transcripts = f\"{base_path}model_transcriptions/\"\n",
     "else:\n",
-    "    saveFolder_transcripts = \"/data/willett_data/model_transcriptions_retest/\"\n",
+    "    saveFolder_transcripts = f\"{base_path}model_transcriptions_retest/\"\n",
     "    \n",
-    "\n",
     "day_cer_dict = {}\n",
     "total_wer_dict = {}\n",
     "\n",
@@ -520,7 +523,7 @@
     "\n",
     "            print(f\"Average decoding time per sample: {mean_time:.3f} seconds\")\n",
     "            print(f\"Standard deviation: {std_time:.3f} seconds\")\n",
-    "            break\n",
+    " \n",
     "            if run_for_llm:\n",
     "                \n",
     "                print(\"SAVING OUTPUTS FOR LLM\")\n",
@@ -531,6 +534,7 @@
     "                    pickle.dump(nbest_outputs, f)\n",
     "                \n",
     "            else:\n",
+    "                \n",
     "                # just get perf with greedy decoding\n",
     "                for i in range(len(model_outputs[\"transcriptions\"])):\n",
     "                    model_outputs[\"transcriptions\"][i] = model_outputs[\"transcriptions\"][i].strip()\n",
