--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home3/ebrahim2/miniconda3/envs/speech3/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import time\n",
@@ -46,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +132,7 @@
     "# file path stuff for when running models on two servers (obiwan or leia)\n",
     "# model storage locations and data path within model args differ depending on \n",
     "# the server. \n",
-    "current_server = 'obi'\n",
+    "current_server = 'leia'\n",
     "server_models_ran_on = 'obi'\n",
     "\n",
     "if current_server == 'obi':\n",
@@ -156,16 +147,16 @@
     "\n",
     "if current_server == 'leia':\n",
     "    \n",
-    "    base_path = '/home3/skaasyap/willett/'\n",
+    "    base_path = '/home3/ebrahim/save_transcripts/'\n",
     "    \n",
     "    if server_models_ran_on == 'obi':\n",
-    "        model_storage_path = '/home3/skaasyap/willett/obi_models/outputs/'\n",
+    "        model_storage_path = '/home3/ebrahim/obi_outputs/'\n",
     "    \n",
     "    elif server_models_ran_on == 'leia':\n",
     "        model_storage_path = '/home3/skaasyap/willett/outputs'\n",
     "        \n",
     "leia_to_obi_dict = {'/home3/skaasyap/willett/data_log_both':'/data/willett_data/ptDecoder_ctc_both', \n",
-    "                    '/home3/skaasyap/willett/data_log':'/data/willett_data/ptDecoder_ctc',\n",
+    "                    '/home3/skaasyap/willett/data':'/data/willett_data/ptDecoder_ctc',\n",
     "                    '/home3/skaasyap/willett/data_log_both_held_out_days': '/data/willett_data/ptDecoder_ctc_both_held_out_days', \n",
     "                    '/home3/skaasyap/willett/data_log_both_held_out_days_1': '/data/willett_data/ptDecoder_ctc_both_held_out_days_1',\n",
     "                    '/home3/skaasyap/willett/data_log_both_held_out_days_2': '/data/willett_data/ptDecoder_ctc_both_held_out_days_2'}\n",
@@ -326,7 +317,8 @@
     "                bidirectional=args[\"bidirectional\"],\n",
     "                input_dropout=args['input_dropout'], \n",
     "                max_mask_pct=args['max_mask_pct'],\n",
-    "                num_masks=args['num_masks']\n",
+    "                num_masks=args['num_masks'], \n",
+    "                linderman_lab=args['linderman_lab']\n",
     "            ).to(device)\n",
     "\n",
     "        else:\n",
