--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home3/ebrahim/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import time\n",
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,8 +114,8 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0702 14:23:52.150770 14097 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0702 14:26:14.839381 14097 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+      "I0723 17:07:10.783617 1813061 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0723 17:10:09.470276 1813061 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
      ]
     }
    ],
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,60 +175,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing to shared output file\n",
-      "transformer_restricted_days_seed_0\n",
-      "Running model: neurips_gru_data_log_time_masked_lr_schedule_seed_0\n",
-      "[]\n",
-      "Loading GRU\n"
+      "Running model: gru_linderman_lab_updated_seed_0\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_14097/1091477822.py:238: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CER DAY:  2.5734375\n",
-      "CER DAY:  2.671875\n",
-      "CER DAY:  2.634375\n",
-      "CER DAY:  2.7375\n",
-      "CER DAY:  2.6859375\n",
-      "CER DAY:  3.334375\n",
-      "CER DAY:  2.9125\n",
-      "CER DAY:  2.628125\n",
-      "CER DAY:  2.7890625\n",
-      "CER DAY:  3.1171875\n",
-      "CER DAY:  2.871875\n",
-      "CER DAY:  2.8765625\n",
-      "CER DAY:  3.0328125\n",
-      "CER DAY:  3.28125\n",
-      "CER DAY:  2.9078125\n",
-      "Model performance:  2.8703125\n",
-      "Running n-gram LM\n",
-      "Average decoding time per sample: 0.026 seconds\n",
-      "Standard deviation: 0.019 seconds\n"
+     "ename": "KeyError",
+     "evalue": "'/data/willett_data/ptDecoder_ctc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 60\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[39mif\u001b[39;00m server_models_ran_on \u001b[39m!=\u001b[39m current_server:\n\u001b[1;32m     59\u001b[0m     \u001b[39mif\u001b[39;00m current_server \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mleia\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m---> 60\u001b[0m         data_file \u001b[39m=\u001b[39m leia_to_obi_dict[args[\u001b[39m'\u001b[39;49m\u001b[39mdatasetPath\u001b[39;49m\u001b[39m'\u001b[39;49m]]\n\u001b[1;32m     61\u001b[0m     \u001b[39melif\u001b[39;00m current_server \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mobi\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     62\u001b[0m         data_file \u001b[39m=\u001b[39m obi_to_leia_dict[args[\u001b[39m'\u001b[39m\u001b[39mdatasetPath\u001b[39m\u001b[39m'\u001b[39m]]\n",
+      "\u001b[0;31mKeyError\u001b[0m: '/data/willett_data/ptDecoder_ctc'"
      ]
     }
    ],
    "source": [
     "device = \"cuda:2\"\n",
     "\n",
-    "models_to_run = ['neurips_gru_data_log_time_masked_lr_schedule']\n",
+    "models_to_run = ['gru_linderman_lab_updated']\n",
     "\n",
-    "shared_output_file = 'transformer_restricted_days'\n",
+    "shared_output_file = ''\n",
     "\n",
     "if len(shared_output_file) > 0:\n",
     "    print(\"Writing to shared output file\")\n",
@@ -227,11 +210,11 @@
     "else:\n",
     "    write_mode = \"w\"\n",
     "    \n",
-    "seeds_list = [0]\n",
+    "seeds_list = [0,1,2,3]\n",
     "partition = \"competition\" # \"test\"\n",
     "run_lm = True\n",
     "\n",
-    "comp_on_reduced = True # if running restricted days analyses\n",
+    "comp_on_reduced = False # if running restricted days analyses\n",
     "fill_max_day = False\n",
     "skip_days = [[]]\n",
     "\n",
@@ -274,9 +257,11 @@
     "        if server_models_ran_on != current_server:\n",
     "            \n",
     "            if current_server == 'leia':\n",
-    "                data_file = leia_to_obi_dict[args['datasetPath']]\n",
-    "            elif current_server == 'obi':\n",
     "                data_file = obi_to_leia_dict[args['datasetPath']]\n",
+    "                \n",
+    "            elif current_server == 'obi':\n",
+    "                data_file = leia_to_obi_dict[args['datasetPath']]\n",
+    "                \n",
     "        \n",
     "        else:\n",
     "            \n",
@@ -669,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
