--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -175,25 +175,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: gru_linderman_lab_updated_seed_0\n"
+      "Running model: gru_linderman_lab_updated_seed_0\n",
+      "[]\n",
+      "Loading GRU\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "'/data/willett_data/ptDecoder_ctc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 60\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[39mif\u001b[39;00m server_models_ran_on \u001b[39m!=\u001b[39m current_server:\n\u001b[1;32m     59\u001b[0m     \u001b[39mif\u001b[39;00m current_server \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mleia\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m---> 60\u001b[0m         data_file \u001b[39m=\u001b[39m leia_to_obi_dict[args[\u001b[39m'\u001b[39;49m\u001b[39mdatasetPath\u001b[39;49m\u001b[39m'\u001b[39;49m]]\n\u001b[1;32m     61\u001b[0m     \u001b[39melif\u001b[39;00m current_server \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mobi\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     62\u001b[0m         data_file \u001b[39m=\u001b[39m obi_to_leia_dict[args[\u001b[39m'\u001b[39m\u001b[39mdatasetPath\u001b[39m\u001b[39m'\u001b[39m]]\n",
-      "\u001b[0;31mKeyError\u001b[0m: '/data/willett_data/ptDecoder_ctc'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1813061/1577316804.py:230: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CER DAY:  2.5734375\n",
+      "CER DAY:  2.7\n",
+      "CER DAY:  2.6703125\n",
+      "CER DAY:  2.7359375\n",
+      "CER DAY:  2.6890625\n",
+      "CER DAY:  3.3328125\n",
+      "CER DAY:  2.9296875\n",
+      "CER DAY:  2.6734375\n",
+      "CER DAY:  2.8140625\n",
+      "CER DAY:  3.1046875\n",
+      "CER DAY:  2.8828125\n",
+      "CER DAY:  2.8328125\n",
+      "CER DAY:  3.0578125\n",
+      "CER DAY:  3.278125\n",
+      "CER DAY:  2.93125\n",
+      "Model performance:  2.8804166666666666\n",
+      "Running n-gram LM\n",
+      "Average decoding time per sample: 0.034 seconds\n",
+      "Standard deviation: 0.028 seconds\n",
+      "CER and WER after 3-gram LM:  (3.1779166666666665, 3.1142708333333333, 3.239895833333333) (3.07625, 3.0166666666666666, 3.1358333333333333)\n",
+      "Running model: gru_linderman_lab_updated_seed_1\n",
+      "[]\n",
+      "Loading GRU\n",
+      "CER DAY:  2.5453125\n",
+      "CER DAY:  2.665625\n",
+      "CER DAY:  2.6375\n",
+      "CER DAY:  2.715625\n",
+      "CER DAY:  2.6828125\n",
+      "CER DAY:  3.35\n",
+      "CER DAY:  2.909375\n",
+      "CER DAY:  2.6609375\n",
+      "CER DAY:  2.8140625\n",
+      "CER DAY:  3.11875\n",
+      "CER DAY:  2.8765625\n",
+      "CER DAY:  2.840625\n",
+      "CER DAY:  2.9953125\n",
+      "CER DAY:  3.23125\n",
+      "CER DAY:  2.9078125\n",
+      "Model performance:  2.8634375\n",
+      "Running n-gram LM\n",
+      "Average decoding time per sample: 0.035 seconds\n",
+      "Standard deviation: 0.030 seconds\n",
+      "CER and WER after 3-gram LM:  (3.1664583333333334, 3.1032265624999997, 3.2294791666666667) (3.0791666666666666, 3.0216666666666665, 3.1375)\n",
+      "Running model: gru_linderman_lab_updated_seed_2\n",
+      "[]\n",
+      "Loading GRU\n",
+      "CER DAY:  2.5828125\n",
+      "CER DAY:  2.665625\n",
+      "CER DAY:  2.665625\n",
+      "CER DAY:  2.746875\n",
+      "CER DAY:  2.7234375\n",
+      "CER DAY:  3.375\n",
+      "CER DAY:  2.9453125\n",
+      "CER DAY:  2.68125\n",
+      "CER DAY:  2.8359375\n",
+      "CER DAY:  3.125\n",
+      "CER DAY:  2.9046875\n",
+      "CER DAY:  2.8640625\n",
+      "CER DAY:  3.04375\n",
+      "CER DAY:  3.2828125\n",
+      "CER DAY:  2.928125\n",
+      "Model performance:  2.8913541666666664\n",
+      "Running n-gram LM\n",
+      "Average decoding time per sample: 0.033 seconds\n",
+      "Standard deviation: 0.027 seconds\n",
+      "CER and WER after 3-gram LM:  (3.1885416666666666, 3.1260416666666666, 3.2513541666666668) (3.0745833333333334, 3.0166666666666666, 3.13375)\n",
+      "Running model: gru_linderman_lab_updated_seed_3\n",
+      "[]\n",
+      "Loading GRU\n",
+      "CER DAY:  2.575\n",
+      "CER DAY:  2.6515625\n",
+      "CER DAY:  2.646875\n",
+      "CER DAY:  2.7421875\n",
+      "CER DAY:  2.715625\n",
+      "CER DAY:  3.3296875\n",
+      "CER DAY:  2.925\n",
+      "CER DAY:  2.6796875\n",
+      "CER DAY:  2.83125\n",
+      "CER DAY:  3.0859375\n",
+      "CER DAY:  2.8671875\n",
+      "CER DAY:  2.88125\n",
+      "CER DAY:  3.040625\n",
+      "CER DAY:  3.2609375\n",
+      "CER DAY:  2.9171875\n",
+      "Model performance:  2.8766666666666665\n",
+      "Running n-gram LM\n",
+      "Average decoding time per sample: 0.035 seconds\n",
+      "Standard deviation: 0.029 seconds\n",
+      "CER and WER after 3-gram LM:  (3.1816666666666666, 3.117809895833333, 3.245) (3.0754166666666665, 3.0145833333333334, 3.1341666666666668)\n"
      ]
     }
    ],
