--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home3/ebrahim/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home3/ebrahim2/miniconda3/envs/speech3/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -41,6 +41,7 @@
     "from lm_utils import _cer_and_wer\n",
     "import json\n",
     "import os\n",
+    "import sys\n",
     "import copy"
    ]
   },
@@ -78,7 +79,7 @@
    "source": [
     "base_dir = \"/home3/skaasyap/willett\"\n",
     "\n",
-    "load_lm = True\n",
+    "load_lm = False\n",
     "# LM decoding hyperparameters\n",
     "acoustic_scale = 0.8\n",
     "blank_penalty = np.log(2)\n",
@@ -101,24 +102,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded LM\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0723 17:07:10.783617 1813061 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0723 17:10:09.470276 1813061 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if load_lm and 'ngramDecoder' not in globals(): \n",
     "        \n",
@@ -134,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# file path stuff for when running models on two servers (obiwan or leia)\n",
     "# model storage locations and data path within model args differ depending on \n",
     "# the server. \n",
-    "current_server = 'leia'\n",
-    "server_models_ran_on = 'obi'\n",
+    "current_server = 'obi'\n",
+    "server_models_ran_on = 'leia'\n",
     "\n",
     "if current_server == 'obi':\n",
     "    \n",
@@ -182,16 +166,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: gru_linderman_lab_updated_seed_0\n",
-      "[]\n",
-      "Loading GRU\n"
+      "Running model: neurips_transformer_time_masked_seed_3\n",
+      "/data/willett_data/ptDecoder_ctc_both\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1813061/1577316804.py:230: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_434131/2143346704.py:228: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -199,102 +182,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CER DAY:  2.5734375\n",
-      "CER DAY:  2.7\n",
-      "CER DAY:  2.6703125\n",
-      "CER DAY:  2.7359375\n",
-      "CER DAY:  2.6890625\n",
-      "CER DAY:  3.3328125\n",
-      "CER DAY:  2.9296875\n",
-      "CER DAY:  2.6734375\n",
-      "CER DAY:  2.8140625\n",
-      "CER DAY:  3.1046875\n",
-      "CER DAY:  2.8828125\n",
-      "CER DAY:  2.8328125\n",
-      "CER DAY:  3.0578125\n",
-      "CER DAY:  3.278125\n",
-      "CER DAY:  2.93125\n",
-      "Model performance:  2.8804166666666666\n",
-      "Running n-gram LM\n",
-      "Average decoding time per sample: 0.034 seconds\n",
-      "Standard deviation: 0.028 seconds\n",
-      "CER and WER after 3-gram LM:  (3.1779166666666665, 3.1142708333333333, 3.239895833333333) (3.07625, 3.0166666666666666, 3.1358333333333333)\n",
-      "Running model: gru_linderman_lab_updated_seed_1\n",
-      "[]\n",
-      "Loading GRU\n",
-      "CER DAY:  2.5453125\n",
-      "CER DAY:  2.665625\n",
-      "CER DAY:  2.6375\n",
-      "CER DAY:  2.715625\n",
-      "CER DAY:  2.6828125\n",
-      "CER DAY:  3.35\n",
-      "CER DAY:  2.909375\n",
-      "CER DAY:  2.6609375\n",
-      "CER DAY:  2.8140625\n",
-      "CER DAY:  3.11875\n",
-      "CER DAY:  2.8765625\n",
-      "CER DAY:  2.840625\n",
-      "CER DAY:  2.9953125\n",
-      "CER DAY:  3.23125\n",
-      "CER DAY:  2.9078125\n",
-      "Model performance:  2.8634375\n",
-      "Running n-gram LM\n",
-      "Average decoding time per sample: 0.035 seconds\n",
-      "Standard deviation: 0.030 seconds\n",
-      "CER and WER after 3-gram LM:  (3.1664583333333334, 3.1032265624999997, 3.2294791666666667) (3.0791666666666666, 3.0216666666666665, 3.1375)\n",
-      "Running model: gru_linderman_lab_updated_seed_2\n",
-      "[]\n",
-      "Loading GRU\n",
-      "CER DAY:  2.5828125\n",
-      "CER DAY:  2.665625\n",
-      "CER DAY:  2.665625\n",
-      "CER DAY:  2.746875\n",
-      "CER DAY:  2.7234375\n",
-      "CER DAY:  3.375\n",
-      "CER DAY:  2.9453125\n",
-      "CER DAY:  2.68125\n",
-      "CER DAY:  2.8359375\n",
-      "CER DAY:  3.125\n",
-      "CER DAY:  2.9046875\n",
-      "CER DAY:  2.8640625\n",
-      "CER DAY:  3.04375\n",
-      "CER DAY:  3.2828125\n",
-      "CER DAY:  2.928125\n",
-      "Model performance:  2.8913541666666664\n",
-      "Running n-gram LM\n",
-      "Average decoding time per sample: 0.033 seconds\n",
-      "Standard deviation: 0.027 seconds\n",
-      "CER and WER after 3-gram LM:  (3.1885416666666666, 3.1260416666666666, 3.2513541666666668) (3.0745833333333334, 3.0166666666666666, 3.13375)\n",
-      "Running model: gru_linderman_lab_updated_seed_3\n",
-      "[]\n",
-      "Loading GRU\n",
-      "CER DAY:  2.575\n",
-      "CER DAY:  2.6515625\n",
-      "CER DAY:  2.646875\n",
-      "CER DAY:  2.7421875\n",
-      "CER DAY:  2.715625\n",
-      "CER DAY:  3.3296875\n",
-      "CER DAY:  2.925\n",
-      "CER DAY:  2.6796875\n",
-      "CER DAY:  2.83125\n",
-      "CER DAY:  3.0859375\n",
-      "CER DAY:  2.8671875\n",
-      "CER DAY:  2.88125\n",
-      "CER DAY:  3.040625\n",
-      "CER DAY:  3.2609375\n",
-      "CER DAY:  2.9171875\n",
-      "Model performance:  2.8766666666666665\n",
-      "Running n-gram LM\n",
-      "Average decoding time per sample: 0.035 seconds\n",
-      "Standard deviation: 0.029 seconds\n",
-      "CER and WER after 3-gram LM:  (3.1816666666666666, 3.117809895833333, 3.245) (3.0754166666666665, 3.0145833333333334, 3.1341666666666668)\n"
+      "CER DAY:  0.3076062639821029\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "device = \"cuda:2\"\n",
     "\n",
-    "models_to_run = ['gru_linderman_lab_updated']\n",
+    "models_to_run = ['neurips_transformer_time_masked']\n",
     "\n",
     "shared_output_file = ''\n",
     "\n",
@@ -304,9 +208,9 @@
     "else:\n",
     "    write_mode = \"w\"\n",
     "    \n",
-    "seeds_list = [0,1,2,3]\n",
-    "partition = \"competition\" # \"test\"\n",
-    "run_lm = True\n",
+    "seeds_list = [0]\n",
+    "partition = \"test\" # \"test\"\n",
+    "run_lm = False\n",
     "\n",
     "comp_on_reduced = False # if running restricted days analyses\n",
     "fill_max_day = False\n",
@@ -356,16 +260,16 @@
     "            elif current_server == 'obi':\n",
     "                data_file = leia_to_obi_dict[args['datasetPath']]\n",
     "                \n",
-    "        \n",
     "        else:\n",
-    "            \n",
+    "\n",
     "            data_file = args['datasetPath']\n",
     "            \n",
+    "            \n",
+    "        print(data_file)\n",
     "      \n",
     "        if 'ventral_6v_only' not in args:\n",
     "            args['ventral_6v_only'] = False\n",
     "            \n",
-    "        print(args['restricted_days'])\n",
     "        trainLoaders, testLoaders, loadedData = getDatasetLoaders(\n",
     "            data_file, 8, args['restricted_days'], \n",
     "            args['ventral_6v_only']\n",
@@ -418,16 +322,14 @@
     "                mlp_dim_ratio=args['mlp_dim_ratio'],\n",
     "                dropout=0,\n",
     "                input_dropout=0,\n",
-    "                look_ahead=args['look_ahead'],\n",
     "                gaussianSmoothWidth=args['gaussianSmoothWidth'],\n",
     "                T5_style_pos=args['T5_style_pos'],\n",
-    "                max_mask_pct=0.05,\n",
-    "                num_masks=20, \n",
+    "                max_mask_pct=0.0,\n",
+    "                num_masks=0, \n",
     "                mask_token_zeros=args['mask_token_zero'], \n",
     "                num_masks_channels=0, \n",
     "                max_mask_channels=0, \n",
-    "                dist_dict_path=0, \n",
-    "                linderman_lab=False\n",
+    "                dist_dict_path=0\n",
     "            ).to(device)\n",
     "            \n",
     "            \n",
@@ -553,6 +455,8 @@
     "        cer = total_edit_distance / total_seq_length\n",
     "        \n",
     "        print(\"Model performance: \", cer)\n",
+    "        sys.exit()\n",
+    "        \n",
     "\n",
     "        if run_lm:\n",
     "            \n",
@@ -645,20 +549,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TM TRANSFORMER \n",
     "0.016 +/- 0.006 seconds\n"
@@ -666,60 +559,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.6874999999999996"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "0.059/0.016\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[4, 5, 6, 7, 8]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "args['restricted_days']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "args['ventral_6v_only']"
    ]
@@ -748,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
