Running GRU SHORT

--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
     "# model storage locations and data path within model args differ depending on \n",
     "# the server. \n",
     "current_server = 'obi'\n",
-    "server_models_ran_on = 'leia'\n",
+    "server_models_ran_on = 'obi'\n",
     "\n",
     "if current_server == 'obi':\n",
     "    \n",
@@ -159,22 +159,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_transformer_time_masked_seed_3\n",
-      "/data/willett_data/ptDecoder_ctc_both\n"
+      "Running model: transformer_short_training_seed_0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_434131/2143346704.py:228: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_434131/1341471609.py:228: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -182,7 +181,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CER DAY:  0.3076062639821029\n"
+      "CER DAY:  0.3691275167785235\n",
+      "CER DAY:  0.2850574712643678\n",
+      "CER DAY:  0.2380191693290735\n",
+      "CER DAY:  0.2653061224489796\n",
+      "CER DAY:  0.12825112107623318\n",
+      "CER DAY:  0.1224105461393597\n",
+      "CER DAY:  0.13528855250709557\n",
+      "CER DAY:  0.18092691622103388\n",
+      "CER DAY:  0.1752988047808765\n",
+      "CER DAY:  0.19833333333333333\n",
+      "CER DAY:  0.17760279965004375\n",
+      "CER DAY:  0.21415441176470587\n",
+      "CER DAY:  0.17472118959107807\n",
+      "CER DAY:  0.15288788221970556\n",
+      "CER DAY:  0.12934879571810884\n",
+      "CER DAY:  0.1272563176895307\n",
+      "CER DAY:  0.13227513227513227\n",
+      "CER DAY:  0.1727541954590326\n",
+      "CER DAY:  0.12638580931263857\n",
+      "CER DAY:  0.12142152023692004\n",
+      "CER DAY:  0.12261306532663317\n",
+      "CER DAY:  0.14058106841611998\n",
+      "CER DAY:  0.13901760889712697\n",
+      "CER DAY:  0.17916666666666667\n",
+      "Model performance:  0.1712269406958029\n"
      ]
     },
     {
@@ -198,7 +221,7 @@
    "source": [
     "device = \"cuda:2\"\n",
     "\n",
-    "models_to_run = ['neurips_transformer_time_masked']\n",
+    "models_to_run = ['transformer_short_training']\n",
     "\n",
     "shared_output_file = ''\n",
     "\n",
@@ -265,7 +288,7 @@
     "            data_file = args['datasetPath']\n",
     "            \n",
     "            \n",
-    "        print(data_file)\n",
+    "        data_file = '/data/willett_data/ptDecoder_ctc'\n",
     "      \n",
     "        if 'ventral_6v_only' not in args:\n",
     "            args['ventral_6v_only'] = False\n",
